docs: 📝 Change cargo espflash references for cargo run

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -4,7 +4,7 @@
 
 ✅ Run `host_client` in parallel in it's own terminal. The `host_client` publishes board LED `color` roughly every second.
 
-✅ Verify your subscription is working by logging the information received through the topic. 
+✅ Verify your subscription is working by logging the information received through the topic.
 
 ✅ React to the LED commands by setting the newly received color to the board with `led.set_pixel(/* received color here */)`.
 
@@ -13,7 +13,7 @@
 The board LED commands are made of three bytes indicating red, green and blue.
     - `enum ColorData` contains a topic `color_topic(uuid)` and the `BoardLed`
     - it can convert the `data()` field of an `EspMqttMessage` by using `try_from()`. The message needs first to be coerced into a slice, using `let message_data: &[u8] = &message.data();`
-    
+
 
 ```rust
 // RGB LED command
@@ -54,7 +54,7 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
         // all messages in this exercise will be of type `Complete`
         // the other variants of the `Details` enum are for larger message payloads
         Complete => {
-            
+
             // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
             // You can coerce it into a slice to be sent to try_from()
             let message_data: &[u8] = &message.data();
@@ -64,7 +64,7 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
             }
         }
         // Use Rust Analyzer to generate the missing match arms or match an incomplete message with a log message.
-        
+
     }
 ```
 
@@ -76,7 +76,7 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
 ## Extra tasks
 
 ### Implement MQTT with hierarchical topics
-- work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own. 
+- work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own.
 
 Check `common/lib/mqtt-messages`:
 
@@ -95,9 +95,9 @@ let raw = RawCommandData {
 
 ```
 
-Check the `host-client`: 
+Check the `host-client`:
 
-- you will need to replace `color` with `command`. For example like this 
+- you will need to replace `color` with `command`. For example like this
 
 ```
 let command = Command::BoardLed(color)
@@ -113,7 +113,7 @@ match message.details() {
         // are for larger message payloads
 
         // Cow<str> behaves a lot like other Rust strings (&str, String)
-        let topic: Cow<str> = message.topic(token); 
+        let topic: Cow<str> = message.topic(token);
 
         // determine if we're interested in this topic and
         // dispatch based on its content
@@ -123,7 +123,7 @@ match message.details() {
             if let Ok(Command::BoardLed(color)) = Command::try_from(raw) {
                 // set the LED to the newly received color
             }
-        
+
         },
         _ => {}
         }
@@ -134,7 +134,7 @@ match message.details() {
 #### Hints!
 
 - Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
-- The solution implementing hierarchy can be run with `cargo espflash --release --example solution2 --monitor /dev/tty.usbmodem0`, while the solution without can be run with `cargo espflash --release --monitor /dev/tty.usbmodem0` or `cargo espflash --release --example solution1 --monitor /dev/tty.usbmodem0`
+- The solution implementing hierarchy can be run with `cargo run --example solution2`, while the solution without can be run with `cargo run` or `cargo run --example solution1`
 
 ### Other tasks
 
@@ -145,7 +145,7 @@ match message.details() {
 InitialChunk(chunk_info) => { /* first chunk */},
 SubsequentChunk(chunk_data) => { /* all subsequent chunks */ }
 ```
-You do not need to differentiate incoming chunks based on message ID, since at most one message will be in flight at any given time. 
+You do not need to differentiate incoming chunks based on message ID, since at most one message will be in flight at any given time.
 
 ## Troubleshooting
 
