--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -1,4 +1,4 @@
-## I²C Sensor Reading Exercise 
+## I²C Sensor Reading Exercise
 
 In this exercise you will learn how to read out sensors on the I²C bus.
 
@@ -6,10 +6,10 @@ In this exercise you will learn how to read out sensors on the I²C bus.
 The board has two sensors that can be read via the I²C bus:
 
 
-| Peripheral                | Part number  | Reference                                                                   | Crate | Address |
-|---------------------------|--------------|-----------------------------------------------------------------------------|-------|---------|
-| IMU                       | ICM-42670-P  | [Datasheet](https://invensense.tdk.com/download-pdf/icm-42670-p-datasheet/) | [Link](https://crates.io/crates/icm42670)   | 0x68 |
-| Temperature and Humidity  | SHTC3        | [Datasheet](https://www.sensirion.com/en/environmental-sensors/humidity-sensors/digital-humidity-sensor-shtc3-our-new-standard-for-consumer-electronics/)            | [Link](https://crates.io/crates/shtcx)       | 0x70 |
+| Peripheral               | Part number | Reference                                                                                                                                                 | Crate                                     | Address |
+| ------------------------ | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------- | ------- |
+| IMU                      | ICM-42670-P | [Datasheet](https://invensense.tdk.com/download-pdf/icm-42670-p-datasheet/)                                                                               | [Link](https://crates.io/crates/icm42670) | 0x68    |
+| Temperature and Humidity | SHTC3       | [Datasheet](https://www.sensirion.com/en/environmental-sensors/humidity-sensors/digital-humidity-sensor-shtc3-our-new-standard-for-consumer-electronics/) | [Link](https://crates.io/crates/shtcx)    | 0x70    |
 
 
 The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
@@ -23,29 +23,29 @@ Create an instance of the of the Humidity sensor SHTC3 and read and print the va
 `i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1. To run the solution add `--example part_1` to your run command:
 
 ```console
-$ cargo espflash --release --example part_1 --monitor /dev/SERIAL_DEVICE
+$ cargo run --example part_1
 ```
 
-`i2c-sensor-reading/src/main.rs` contains skeleton code, that already contains necessary imports for this part. 
+`i2c-sensor-reading/src/main.rs` contains skeleton code, that already contains necessary imports for this part.
 
 #### Steps:
 
 ✅ Go to the `i2c-sensor-reading/` folder and open the relevant documentation with the following command:
-  
+
 ```
 $ cargo doc --open
 ```
- 
-✅ Define two pins, one as SDA and one as SCL. 
 
-| Signal     | GPIO        |
-|------------|-------------|
-| SDA        | GPIO10      |
-| SCL        | GPIO8       |
+✅ Define two pins, one as SDA and one as SCL.
+
+| Signal | GPIO   |
+| ------ | ------ |
+| SDA    | GPIO10 |
+| SCL    | GPIO8  |
 
 ✅ Create an Instance of the I²C peripheral with the help of the documentation you generated. This requires a baud rate: You can use 400kHz, a default value.
 
-✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance. 
+✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance.
 
 ✅ To check if the sensor is addressed correctly, read it's device ID and print the value.
 
@@ -54,7 +54,7 @@ $ cargo doc --open
 Device ID: 71
 ```
 
-✅ Make a measurement, and read the sensor values and print them. Check the documentation for guidance on sensor methods. 
+✅ Make a measurement, and read the sensor values and print them. Check the documentation for guidance on sensor methods.
 
 #### Expected Output:
 
@@ -63,7 +63,7 @@ TEMP: [local temperature] °C
 HUM: [local humidity] %
 ```
 
-❗ Some sensors need some time to pass between measurement and reading value. 
+❗ Some sensors need some time to pass between measurement and reading value.
 ❗ Watch out for the expected units!
 
 
@@ -72,27 +72,27 @@ HUM: [local humidity] %
 
 ## Hints
 
-* There are methods that turn the sensor values into the desired unit. 
+* There are methods that turn the sensor values into the desired unit.
 
-### Part 2: Reading Accelerometer data. 
+### Part 2: Reading Accelerometer data.
 
-Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors. 
+Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors.
 
 
 Continue with your own solution from part one. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
 
-`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help. 
+`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help.
 
 
 #### Steps
 
-✅ Import the driver crate for the ICM42670p.  
+✅ Import the driver crate for the ICM42670p.
 
 ```rust
 use imc42670p;
 ```
 
-✅ Create an instance of the sensor.  
+✅ Create an instance of the sensor.
 
 
 
@@ -101,19 +101,19 @@ use imc42670p;
 
 <details>
   <summary>Answer</summary>
-  
-This is an ownership issue. Every place in memory needs to be owned by something. If we pass the I²C bus to the SHTC3, the sensor owns the I²C bus. It can't be owned by another sensor. Borrowing is also not possible, because the I²C bus needs to be mutable. Both sensors need to be able to change it. We solve this problem by introducing a bus manager, that creates a number of proxies of the I²C bus. These proxies can than be owned by the respective sensors. 
+
+This is an ownership issue. Every place in memory needs to be owned by something. If we pass the I²C bus to the SHTC3, the sensor owns the I²C bus. It can't be owned by another sensor. Borrowing is also not possible, because the I²C bus needs to be mutable. Both sensors need to be able to change it. We solve this problem by introducing a bus manager, that creates a number of proxies of the I²C bus. These proxies can than be owned by the respective sensors.
 </details>
 
-✅ Import the bus manager crate. 
+✅ Import the bus manager crate.
 
 ```rust
 use shared_bus;
 ```
 
-✅ Create an instance of a simple bus manager. Make two proxies and use them instead of the original I²C instance to pass to the sensors. 
+✅ Create an instance of a simple bus manager. Make two proxies and use them instead of the original I²C instance to pass to the sensors.
 
-✅ Read & print the device ID from both sensors. 
+✅ Read & print the device ID from both sensors.
 
 #### Expected Output:
 ```
@@ -122,10 +122,10 @@ Device ID ICM42670p: 96
 ```
 
 
-✅ Start the ICM42670p in low noise mode. 
+✅ Start the ICM42670p in low noise mode.
 
 
-✅ Read the gyroscope sensor values and print them with 2 decimal places alongside the temperature and humidity values. 
+✅ Read the gyroscope sensor values and print them with 2 decimal places alongside the temperature and humidity values.
 
 #### Expected Output:
 
