docs: 🎨 Format code snipets md lang

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -99,7 +99,7 @@ Check the `host-client`:
 
 - you will need to replace `color` with `command`. For example like this
 
-```
+```rust
 let command = Command::BoardLed(color)
 ```
 
