--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -32,7 +32,7 @@ $ cargo run --example part_1
 
 ✅ Go to the `i2c-sensor-reading/` folder and open the relevant documentation with the following command:
 
-```
+```console
 $ cargo doc --open
 ```
 
@@ -50,7 +50,7 @@ $ cargo doc --open
 ✅ To check if the sensor is addressed correctly, read it's device ID and print the value.
 
 #### Expected Output:
-```
+```console
 Device ID: 71
 ```
 
@@ -58,7 +58,7 @@ Device ID: 71
 
 #### Expected Output:
 
-```
+```console
 TEMP: [local temperature] °C
 HUM: [local humidity] %
 ```
@@ -116,7 +116,7 @@ use shared_bus;
 ✅ Read & print the device ID from both sensors.
 
 #### Expected Output:
-```
+```console
 Device ID SHTC3: 71
 Device ID ICM42670p: 96
 ```
@@ -129,7 +129,7 @@ Device ID ICM42670p: 96
 
 #### Expected Output:
 
-```
+```console
 GYRO: X: 0.00 Y: 0.00 Z: 0:00
 TEMP: [local temperature] °C
 HUM: [local humidity] %
