docs: 🎨 Remove $ from console logs where its not needed

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -23,7 +23,7 @@ Create an instance of the of the Humidity sensor SHTC3 and read and print the va
 `i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1. To run the solution add `--example part_1` to your run command:
 
 ```console
-$ cargo run --example part_1
+cargo run --example part_1
 ```
 
 `i2c-sensor-reading/src/main.rs` contains skeleton code, that already contains necessary imports for this part.
@@ -33,7 +33,7 @@ $ cargo run --example part_1
 ✅ Go to the `i2c-sensor-reading/` folder and open the relevant documentation with the following command:
 
 ```console
-$ cargo doc --open
+cargo doc --open
 ```
 
 ✅ Define two pins, one as SDA and one as SCL.
