docs: 📝 Update initial mqtt chapters

--- a/book/src/03_5_1_mqtt.md
+++ b/book/src/03_5_1_mqtt.md
@@ -2,9 +2,9 @@
 
 ❗️This exercise requires an MQTT server. If you're participating in a Ferrous Systems training, login credentials for a server operated by Espressif will be made available in the workshop, otherwise you can use one listed at <https://test.mosquitto.org/> or install one locally.
 
+<!-- Test with HiveMQ or any other free server? -->
 
-
-To conclude the introductory course, let's add some [IoT](https://en.wikipedia.org/wiki/Internet_of_things) functionality to the board. 
+To conclude the introductory course, let's add some [IoT](https://en.wikipedia.org/wiki/Internet_of_things) functionality to the board.
 Our goal here is have it send out real-time updates of sensor values without having to poll repeatedly, like we would with an HTTP server, and also receive commands to change the board LED color.
 
 This can be modeled using a [publish-subscribe architecture](https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern), where multiple clients publish messages in certain channels/topics, and can also subscribe to these topics to receive messages sent by others. Dispatching of these messages is coordinated by a message broker - in our case, this is done an MQTT server.
@@ -13,16 +13,17 @@ This can be modeled using a [publish-subscribe architecture](https://en.wikipedi
 
 An MQTT message consists of two parts - topic and payload.
 
-The topic serves the same purpose as an email subject or a label on a filing cabinet, whereas the payload contains the actual data.  The payload data format is not specified, although JSON is common.
+The topic serves the same purpose as an email subject or a label on a filing cabinet, whereas the payload contains the actual data. The payload data format is not specified, although JSON is common.
 
 🔎 The most recent version of the MQTT standard (MQTT 5) supports content type metadata.
 
-When sending a MQTT message, a Quality of Service (QoS) parameter needs to be defined, indicating delivery guarantees:
-- at most once
-- at least once
-- exactly once.
+When sending a MQTT message, a [Quality of Service (QoS)](https://en.wikipedia.org/wiki/MQTT#Quality_of_service) parameter needs to be defined, indicating delivery guarantees:
+- At most once.
+- At least once.
+- Exactly once.
 
 For the purpose of this exercise it does not matter which quality you choose.
+
 ## MQTT topics
 
 MQTT topics are UTF-8 strings representing a hierarchy, with individual levels separated by a `/` slash character. A leading slash is supported but not recommended. Some example topics are:
