docs: 🎨 Update mqtt instructions

--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -2,18 +2,26 @@
 
 ## Setup
 
-✅ You can find a prepared project skeleton in `intro/mqtt/exercise`. 
+✅ Go to `intro/mqtt/exercise` directory.
 
-✅ In `intro/mqtt/host_client` you can find a host run program that mimics the behavior of a second client. Run it in a separate terminal using the `cargo run` command. Find more information about the host client below. 
+✅ Open the prepared project skeleton in `intro/mqtt/exercise`.
+
+✅ In `intro/mqtt/host_client` you can find a host run program that mimics the behavior of a second client. Run it in a separate terminal using the `cargo run` command. Find more information about the host client below.
 
 The client also generates random RGB colors and publishes them in a topic.
-**This is only relevant for the second part of this exercise**. 
+**This is only relevant for the second part of this exercise**.
 
-❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for both programs. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
+❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
 
 The structure of the exercises is as below. In this part, we will focus on the Temperature topic.
 
 ![example_client_broker_board](./assets/mqtt_structure.svg)
+
+`intro/mqtt/exercise/solution/solution_publ.rs` contains a solution. You can run it with the following command:
+
+```console
+cargo run --example solution_publ
+```
 
 ## Tasks
 
@@ -21,9 +29,21 @@ The structure of the exercises is as below. In this part, we will focus on the T
 
 ✅ Send an empty message under the `hello_topic` to the broker. Use the `hello_topic(uuid)` utility function to generate a properly scoped topic.
 
-✅ Verify a successful publish by having a client connected that logs these messages. The `host_client` implements this behavior. You should run it in another terminal.
+✅ Verify a successful publish by having a client connected that logs these messages. The `host_client` implements this behavior. The `host_client` should be running in another terminal
+before your run your the program in ESP Rust Board. `host_client` should print something like:
+```console
+Setting new color: rgb(1,196,156)
+Setting new color: rgb(182,190,128)
+Board says hi!
+```
 
-✅ In the loop at the end of your main function, publish the board temperature on `temperature_data_topic(uuid)` every second. Verify this, too.
+✅ In the loop at the end of your main function, publish the board temperature on `temperature_data_topic(uuid)` every second. Verify this, using `host_client` too:
+```console
+Setting new color: rgb(218,157,124)
+Board temperature: 33.29°C
+Setting new color: rgb(45,88,22)
+Board temperature: 33.32°C
+```
 
 ## Establishing a connection
 
@@ -35,8 +55,8 @@ It is constructed using
 
 ```rust
 
-let mut client = EspMqttClient::new(broker_url, 
-    &mqtt_config, 
+let mut client = EspMqttClient::new(broker_url,
+    &mqtt_config,
     move |message_event| {
         // ... your handler code here - leave this empty for now
         // we'll add functionality later in this chapter
@@ -54,7 +74,7 @@ The `mqtt_messages` crate (located in `common/lib`) supports handling messages, 
 -  `color_topic(uuid)` - creates a topic to send colors that will be published to the board.
 <!-- - `cmd_topic_fragment(uuid)` - creates the leading part of a "command" topic (the `a-uuid/command/` part in `a-uuid/command/board_led`) -->
 - `hello_topic(uuid)` - test topic for initially verifying a successful connection
-- `temperature_data_topic(uuid)` - creates a whole "temperature" topic string 
+- `temperature_data_topic(uuid)` - creates a whole "temperature" topic string
 
 
 ### Encoding and decoding message payloads
@@ -70,7 +90,7 @@ let decoded_temperature = f32::from_be_bytes(temperature_data); // workstation
 ## Publish & Subscribe
 
 `EspMqttClient` is also responsible for publishing messages under a given topic.
-The `publish` function includes a `retain` parameter indicating whether this message should also be delivered to clients that connect after it has been published. 
+The `publish` function includes a `retain` parameter indicating whether this message should also be delivered to clients that connect after it has been published.
 
 ```rust
 let publish_topic = /* ... */;
