--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -8,6 +8,12 @@
 
 ✅ React to the LED commands by setting the newly received color to the board with `led.set_pixel(/* received color here */)`.
 
+`intro/mqtt/exercise/solution/solution_publ_rcv.rs` contains a solution. You can run it with the following command:
+
+```console
+cargo run --example solution_publ_rcv
+```
+
 ### Encoding and decoding message payloads
 
 The board LED commands are made of three bytes indicating red, green and blue.
@@ -67,7 +73,6 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
 
     }
 ```
-
 
 ## Hints
 
