docs: ✨ Introduce hint mark

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -18,7 +18,7 @@ cargo run --example solution_publ_rcv
 
 The board LED commands are made of three bytes indicating red, green and blue.
     - `enum ColorData` contains a topic `color_topic(uuid)` and the `BoardLed`
-    - it can convert the `data()` field of an `EspMqttMessage` by using `try_from()`. The message needs first to be coerced into a slice, using `let message_data: &[u8] = &message.data();`
+    - It can convert the `data()` field of an `EspMqttMessage` by using `try_from()`. The message needs first to be coerced into a slice, using `let message_data: &[u8] = &message.data();`
 
 
 ```rust
@@ -44,39 +44,36 @@ Since we're only interested in processing successfully received messages, we can
 
 ```rust
 let mut client =
-        EspMqttClient::new(
-            broker_url,
-            &mqtt_config,
-            move |message_event| match message_event {
-                Ok(Received(msg)) => process_message(msg, &mut led),
-                _ => warn!("Received from MQTT: {:?}", message_event),
-            },
-        )?;
+    EspMqttClient::new(
+        broker_url,
+        &mqtt_config,
+        move |message_event| match message_event {
+            Ok(Received(msg)) => process_message(msg, &mut led),
+            _ => warn!("Received from MQTT: {:?}", message_event),
+        },
+    )?;
 ```
 
 In the processing function, you will handle `Complete` messages. Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
 ```rust
-    match message.details() {
-        // all messages in this exercise will be of type `Complete`
-        // the other variants of the `Details` enum are for larger message payloads
-        Complete => {
+match message.details() {
+    // all messages in this exercise will be of type `Complete`
+    // the other variants of the `Details` enum are for larger message payloads
+    Complete => {
 
-            // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
-            // You can coerce it into a slice to be sent to try_from()
-            let message_data: &[u8] = &message.data();
-            if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
-                // set the LED to the newly received color
+        // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
+        // You can coerce it into a slice to be sent to try_from()
+        let message_data: &[u8] = &message.data();
+        if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
+            // set the LED to the newly received color
 
-            }
         }
-        // Use Rust Analyzer to generate the missing match arms or match an incomplete message with a log message.
-
     }
+    // Use Rust Analyzer to generate the missing match arms or match an incomplete message with a log message.
+}
 ```
 
-## Hints
-
-- Use a logger to see what you are receiving, for example: `info!("{}", color);` or `dbg!(color)`.
+💡 Use a logger to see what you are receiving, for example: `info!("{}", color);` or `dbg!(color)`.
 
 ## Extra tasks
 
@@ -136,10 +133,8 @@ match message.details() {
 }
 ```
 
-#### Hints!
-
-- Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
-- The solution implementing hierarchy can be run with `cargo run --example solution2`, while the solution without can be run with `cargo run` or `cargo run --example solution1`
+💡 Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
+💡 The solution implementing hierarchy can be run with `cargo run --example solution2`, while the solution without can be run with `cargo run` or `cargo run --example solution1`
 
 ### Other tasks
 
