--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -66,13 +66,7 @@ HUM: [local humidity] %
 ❗ Some sensors need some time to pass between measurement and reading value.
 ❗ Watch out for the expected units!
 
-
-
-
-
-## Hints
-
-* There are methods that turn the sensor values into the desired unit.
+💡 There are methods that turn the sensor values into the desired unit.
 
 ### Part 2: Reading Accelerometer data.
 
