docs: ✨ Update warning mark

--- a/book/src/03_5_1_mqtt.md
+++ b/book/src/03_5_1_mqtt.md
@@ -1,6 +1,6 @@
 # How does MQTT work
 
-❗️This exercise requires an MQTT server. If you're participating in a Ferrous Systems training, login credentials for a server operated by Espressif will be made available in the workshop, otherwise you can use one listed at <https://test.mosquitto.org/> or install one locally.
+⚠️This exercise requires an MQTT server. If you're participating in a Ferrous Systems training, login credentials for a server operated by Espressif will be made available in the workshop, otherwise you can use one listed at <https://test.mosquitto.org/> or install one locally.
 
 <!-- Test with HiveMQ or any other free server? -->
 
@@ -39,7 +39,7 @@ Here a sensor would periodically publish the garage temperature which then gets 
 
 🔎 Topics starting with `$` are reserved for statistics internal to the broker. Typically the topic will begin with `$SYS`. Clients cannot publish to these topics.
 
-❗️Since all workshop participants will be sharing the same MQTT server, some measures are required to prevent crosstalk between different projects. The exercise skeleton will generate a unique, random ID (in the `UUID v4` format) for each repository checkout. You can also [manually generate your own online](https://www.uuidgenerator.net/version4). Your UUID should be used as leading part of the message topics sent between computer and board, roughly resembling this pattern:
+⚠️Since all workshop participants will be sharing the same MQTT server, some measures are required to prevent crosstalk between different projects. The exercise skeleton will generate a unique, random ID (in the `UUID v4` format) for each repository checkout. You can also [manually generate your own online](https://www.uuidgenerator.net/version4). Your UUID should be used as leading part of the message topics sent between computer and board, roughly resembling this pattern:
 
 ```code
 6188eec9-6d3a-4eac-996f-ac4ab13f312d/sensor_data/temperature
