--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -11,7 +11,7 @@
 The client also generates random RGB colors and publishes them in a topic.
 **This is only relevant for the second part of this exercise**.
 
-❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
+⚠️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
 
 The structure of the exercises is as below. In this part, we will focus on the Temperature topic.
 
