docs: 📝 Update mqtt part 2 instructions

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -54,7 +54,10 @@ let mut client =
     )?;
 ```
 
-In the processing function, you will handle `Complete` messages. Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
+In the processing function, you will handle `Complete` messages.
+
+💡 Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
+
 ```rust
 match message.details() {
     // all messages in this exercise will be of type `Complete`
@@ -78,15 +81,15 @@ match message.details() {
 ## Extra tasks
 
 ### Implement MQTT with hierarchical topics
-- work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own.
+✅ Work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own.
 
 Check `common/lib/mqtt-messages`:
 
-- Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
+✅ Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
-- Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
+✅ Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
 
-- `RawCommandData` stores the last part of a message topic (e.g. `board_led` in `a-uuid/command/board_led`). It can be converted into a `Command` using `try_from`.
+✅ `RawCommandData` stores the last part of a message topic (e.g. `board_led` in `a-uuid/command/board_led`). It can be converted into a `Command` using `try_from`.
 
 ```rust
 // RGB LED command
@@ -99,13 +102,13 @@ let raw = RawCommandData {
 
 Check the `host-client`:
 
-- you will need to replace `color` with `command`. For example like this
+✅ you will need to replace `color` with `command`. For example like this
 
 ```rust
 let command = Command::BoardLed(color)
 ```
 
-- in the `process_message()` function you will need to parse the topic.
+✅ in the `process_message()` function you will need to parse the topic.
 
 ```rust
 match message.details() {
@@ -128,7 +131,6 @@ match message.details() {
 
         },
         _ => {}
-        }
     }
 }
 ```
@@ -138,16 +140,18 @@ match message.details() {
 
 ### Other tasks
 
-- leverage [`serde_json`](https://docs.serde.rs/serde_json/) to encode/decode your message data as JSON.
-- Send some messages with a large payload from the host client and process them on the microcontroller. Large messages will be delivered in parts instead of `Details::Complete`:
+✅ Leverage [`serde_json`](https://docs.serde.rs/serde_json/) to encode/decode your message data as JSON.
+
+✅ Send some messages with a large payload from the host client and process them on the microcontroller. Large messages will be delivered in parts instead of `Details::Complete`:
 
 ```rust
 InitialChunk(chunk_info) => { /* first chunk */},
 SubsequentChunk(chunk_data) => { /* all subsequent chunks */ }
 ```
-You do not need to differentiate incoming chunks based on message ID, since at most one message will be in flight at any given time.
+
+💡 You do not need to differentiate incoming chunks based on message ID, since at most one message will be in flight at any given time.
 
 ## Troubleshooting
-
+<!-- DELETE this section? its the same as 3.5.2 -->
 - `error: expected expression, found .` When building host client: update your stable Rust installation to 1.58 or newer
 - MQTT messages not showing up? make sure all clients (board and workstation) use the same UUID (you can see it in the log output)
