--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -11,7 +11,7 @@
 The client also generates random RGB colors and publishes them in a topic.
 **This is only relevant for the second part of this exercise**.
 
-⚠️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
+⚠️ Similar to the http exercises, you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides WiFi credentials, you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember, the name between brackets in the `cfg.toml` file is the name of the package in `Cargo.toml`.
 
 The structure of the exercises is as below. In this part, we will focus on the Temperature topic.
 
@@ -30,7 +30,7 @@ cargo run --example solution_publ
 ✅ Send an empty message under the `hello_topic` to the broker. Use the `hello_topic(uuid)` utility function to generate a properly scoped topic.
 
 ✅ Verify a successful publish by having a client connected that logs these messages. The `host_client` implements this behavior. The `host_client` should be running in another terminal
-before your run your the program in ESP Rust Board. `host_client` should print something like:
+before you run your program in the ESP Rust Board. `host_client` should print something like:
 ```console
 Setting new color: rgb(1,196,156)
 Setting new color: rgb(182,190,128)
@@ -68,7 +68,7 @@ let mut client = EspMqttClient::new(broker_url,
 
 To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/host_client`. It subscribes to the temperature topic.
 
-The `mqtt_messages` crate (located in `common/lib`) supports handling messages, subscriptions and topics:
+The `mqtt_messages` crate (located in `common/lib`) supports handling messages, subscriptions, and topics:
 
 ### Functions to generate topic strings
 -  `color_topic(uuid)` - creates a topic to send colors that will be published to the board.
