--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -2,7 +2,7 @@
 
 ✅ Subscribe to `color_topic(uuid)`
 
-✅ Run `host_client` in parallel in it's own terminal. The `host_client` publishes board LED `color` roughly every second.
+✅ Run `host_client` in parallel in its own terminal. The `host_client` publishes board LED `color` roughly every second.
 
 ✅ Verify your subscription is working by logging the information received through the topic.
 
@@ -16,7 +16,7 @@ cargo run --example solution_publ_rcv
 
 ### Encoding and decoding message payloads
 
-The board LED commands are made of three bytes indicating red, green and blue.
+The board LED commands are made of three bytes indicating red, green, and blue.
     - `enum ColorData` contains a topic `color_topic(uuid)` and the `BoardLed`
     - It can convert the `data()` field of an `EspMqttMessage` by using `try_from()`. The message needs first to be coerced into a slice, using `let message_data: &[u8] = &message.data();`
 
@@ -29,7 +29,7 @@ if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) { /* s
 
 ## Publish & Subscribe
 
-`EspMqttClient` is not only responsible for publishing but also for subscribing to topics.
+`EspMqttClient` is not only responsible for publishing, but also for subscribing to topics.
 
 ```rust
 let subscribe_topic = /* ... */;
@@ -85,7 +85,7 @@ match message.details() {
 
 Check `common/lib/mqtt-messages`:
 
-✅ Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
+✅ Implement the same procedure, but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
 ✅ Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
 
@@ -102,13 +102,13 @@ let raw = RawCommandData {
 
 Check the `host-client`:
 
-✅ you will need to replace `color` with `command`. For example like this
+✅ you will need to replace `color` with `command`. For example, like this:
 
 ```rust
 let command = Command::BoardLed(color)
 ```
 
-✅ in the `process_message()` function you will need to parse the topic.
+✅ in the `process_message()` function, you will need to parse the topic.
 
 ```rust
 match message.details() {
