docs: 🎨 Standarize titles

--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -1,4 +1,4 @@
-# Writing an I²C Driver - Hard
+# Writing an I²C Driver - Hard Version
 
 We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled hard, because you have to come up with the content of the methods and research information in the `embedded-hal` and data-sheets yourself.  You can work in the same file with either version.
 
