docs: 📝 Update part 1 instructions

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -3,7 +3,7 @@
 In this exercise you will learn how to read out sensors on the I²C bus.
 
 
-The board has two sensors that can be read via the I²C bus:
+The Rust ESP Board has [two sensors that can be read via the I²C bus](https://github.com/esp-rs/esp-rust-board#i2c-peripherals):
 
 
 | Peripheral               | Part number | Reference                                                                                                                                                 | Crate                                     | Address |
@@ -12,7 +12,9 @@ The board has two sensors that can be read via the I²C bus:
 | Temperature and Humidity | SHTC3       | [Datasheet](https://www.sensirion.com/en/environmental-sensors/humidity-sensors/digital-humidity-sensor-shtc3-our-new-standard-for-consumer-electronics/) | [Link](https://crates.io/crates/shtcx)    | 0x70    |
 
 
-The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
+The task is to use an existing driver from [crates.io](https://crates.io/) to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using [`shared-bus`](https://crates.io/crates/shared-bus).
+<!-- TODO: Why dont use Jesse`s? -->
+The driver for the second sensor is available locally in `common/`.
 
 ### Part 1: Reading Temperature & Humidity
 
@@ -20,7 +22,7 @@ Create an instance of the of the Humidity sensor SHTC3 and read and print the va
 
 
 
-`i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1. To run the solution add `--example part_1` to your run command:
+`i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1. To run the solution for Part 1:
 
 ```console
 cargo run --example part_1
@@ -43,7 +45,7 @@ cargo doc --open
 | SDA    | GPIO10 |
 | SCL    | GPIO8  |
 
-✅ Create an Instance of the I²C peripheral with the help of the documentation you generated. This requires a baud rate: You can use 400kHz, a default value.
+✅ Create an instance of the I²C peripheral with the help of the documentation you generated. Use 400kHz as frequency.
 
 ✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance.
 
@@ -51,7 +53,7 @@ cargo doc --open
 
 #### Expected Output:
 ```console
-Device ID: 71
+Device ID SHTC3: 71
 ```
 
 ✅ Make a measurement, and read the sensor values and print them. Check the documentation for guidance on sensor methods.
