docs: 📝 Update part 2 instructions

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -1,6 +1,6 @@
 ## I²C Sensor Reading Exercise
 
-In this exercise you will learn how to read out sensors on the I²C bus.
+In this exercise, you will learn how to read out sensors on the I²C bus.
 
 
 The Rust ESP Board has [two sensors that can be read via the I²C bus](https://github.com/esp-rs/esp-rust-board#i2c-peripherals):
@@ -18,7 +18,7 @@ The driver for the second sensor is available locally in `common/`.
 
 ### Part 1: Reading Temperature & Humidity
 
-Create an instance of the of the Humidity sensor SHTC3 and read and print the values for humidity and temperature every 600 ms.
+Create an instance of the Humidity sensor SHTC3 and read and print the values for humidity and temperature every 600 ms.
 
 
 
@@ -47,9 +47,9 @@ cargo doc --open
 
 ✅ Create an instance of the I²C peripheral with the help of the documentation you generated. Use 400kHz as frequency.
 
-✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance.
+✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor, passing the I²C instance into them. Check the documentation for guidance.
 
-✅ To check if the sensor is addressed correctly, read it's device ID and print the value.
+✅ To check if the sensor is addressed correctly, read its device ID and print the value.
 
 #### Expected Output:
 ```console
@@ -77,7 +77,11 @@ Using a bus manager, implement the second sensor. Read out its values and print 
 
 Continue with your own solution from part one. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
 
-`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help.
+`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help, to run it:
+
+```console
+cargo run --example part_2
+```
 
 
 #### Steps
@@ -85,12 +89,10 @@ Continue with your own solution from part one. Alternatively you can start with 
 ✅ Import the driver crate for the ICM42670p.
 
 ```rust
-use imc42670p;
+use icm42670p::{DeviceAddr, ICM42670P};
 ```
 
 ✅ Create an instance of the sensor.
-
-
 
 
 ✅ Why does passing the same I²C instance to two sensors not work, despite both being on the same I²C bus?
@@ -104,7 +106,7 @@ This is an ownership issue. Every place in memory needs to be owned by something
 ✅ Import the bus manager crate.
 
 ```rust
-use shared_bus;
+use shared_bus::BusManagerSimple;
 ```
 
 ✅ Create an instance of a simple bus manager. Make two proxies and use them instead of the original I²C instance to pass to the sensors.
@@ -117,9 +119,7 @@ Device ID SHTC3: 71
 Device ID ICM42670p: 96
 ```
 
-
 ✅ Start the ICM42670p in low noise mode.
-
 
 ✅ Read the gyroscope sensor values and print them with 2 decimal places alongside the temperature and humidity values.
 
