--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -13,14 +13,10 @@ The Rust ESP Board has [two sensors that can be read via the I²C bus](https://g
 
 
 The task is to use an existing driver from [crates.io](https://crates.io/) to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using [`shared-bus`](https://crates.io/crates/shared-bus).
-<!-- TODO: Why dont use Jesse`s? -->
-The driver for the second sensor is available locally in `common/`.
 
 ### Part 1: Reading Temperature & Humidity
 
 Create an instance of the Humidity sensor SHTC3 and read and print the values for humidity and temperature every 600 ms.
-
-
 
 `i2c-sensor-reading/examples/part_1.rs` contains a working solution of Part 1. To run the solution for Part 1:
 
@@ -83,13 +79,12 @@ Continue with your own solution from part one. Alternatively you can start with 
 cargo run --example part_2
 ```
 
-
 #### Steps
 
 ✅ Import the driver crate for the ICM42670p.
 
 ```rust
-use icm42670p::{DeviceAddr, ICM42670P};
+use icm42670::{Address, Icm42670, PowerMode as imuPowerMode};
 ```
 
 ✅ Create an instance of the sensor.
