docs: 📝 Update datasheet links

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -6,10 +6,10 @@ In this exercise, you will learn how to read out sensors on the I²C bus.
 The Rust ESP Board has [two sensors that can be read via the I²C bus](https://github.com/esp-rs/esp-rust-board#i2c-peripherals):
 
 
-| Peripheral               | Part number | Reference                                                                                                                                                 | Crate                                     | Address |
-| ------------------------ | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------- | ------- |
-| IMU                      | ICM-42670-P | [Datasheet](https://invensense.tdk.com/download-pdf/icm-42670-p-datasheet/)                                                                               | [Link](https://crates.io/crates/icm42670) | 0x68    |
-| Temperature and Humidity | SHTC3       | [Datasheet](https://www.sensirion.com/en/environmental-sensors/humidity-sensors/digital-humidity-sensor-shtc3-our-new-standard-for-consumer-electronics/) | [Link](https://crates.io/crates/shtcx)    | 0x70    |
+| Peripheral               | Part number | Reference                                                                                         | Crate                                     | Address |
+| ------------------------ | ----------- | ------------------------------------------------------------------------------------------------- | ----------------------------------------- | ------- |
+| IMU                      | ICM-42670-P | [Datasheet](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) | [Link](https://crates.io/crates/icm42670) | 0x68    |
+| Temperature and Humidity | SHTC3       | [Datasheet](https://datasheetspdf.com/pdf-file/1372109/Sensirion/SHTC3/1)                         | [Link](https://crates.io/crates/shtcx)    | 0x70    |
 
 
 The task is to use an existing driver from [crates.io](https://crates.io/) to read out the temperature and humidity sensor over I²C. After that, a second sensor will be read out over the same I²C bus using [`shared-bus`](https://crates.io/crates/shared-bus).
